finishing touches to the evaluation

--- a/read_coins.ipynb
+++ b/read_coins.ipynb
@@ -13,22 +13,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 183.txt "
+    "##### function: read_coins, which outputs a the distribution of b and 2  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "illegal character:\n",
-      "\n",
-      "The chance of b is:0.40654205607476634% and the chance of 2 is:0.5934579439252337%\n"
-     ]
+     "data": {
+      "text/plain": [
+       "read_coins (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -48,10 +49,35 @@
     "        end\n",
     "    end\n",
     "    return(n)\n",
-    "end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 183.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n",
+      "The chance of b is: 40.654% and the chance of 2 is: 59.346%\n"
+     ]
+    }
+   ],
+   "source": [
     "n1 = read_coins(\"183.txt\") \n",
-    "p1 = n1['b'] / (n1['b'] + n1['2'])\n",
-    "println(\"The chance of b is:\", p1, \"%\", \" and the chance of 2 is:\", (1 - p1), \"%\")"
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
    ]
   },
   {
@@ -63,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -72,14 +98,14 @@
      "text": [
       "illegal character:\n",
       "\n",
-      "The chance of b is:0.5598086124401914% and the chance of 2 is:0.4401913875598086%\n"
+      "The chance of b is: 55.981% and the chance of 2 is: 44.019%\n"
      ]
     }
    ],
    "source": [
     "n1 = read_coins(\"294.txt\") \n",
-    "p1 = n1['b'] / (n1['b'] + n1['2'])\n",
-    "println(\"The chance of b is:\", p1, \"%\", \" and the chance of 2 is:\", (1 - p1), \"%\")"
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
    ]
   },
   {
@@ -91,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +126,14 @@
      "text": [
       "illegal character:\n",
       "\n",
-      "The chance of b is:0.6296296296296297% and the chance of 2 is:0.37037037037037035%\n"
+      "The chance of b is: 62.963% and the chance of 2 is: 37.037%\n"
      ]
     }
    ],
    "source": [
     "n1 = read_coins(\"384.txt\") \n",
-    "p1 = n1['b'] / (n1['b'] + n1['2'])\n",
-    "println(\"The chance of b is:\", p1, \"%\", \" and the chance of 2 is:\", (1 - p1), \"%\")"
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
    ]
   },
   {
@@ -119,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -128,14 +154,14 @@
      "text": [
       "illegal character:\n",
       "\n",
-      "The chance of b is:0.5652173913043478% and the chance of 2 is:0.4347826086956522%\n"
+      "The chance of b is: 56.522% and the chance of 2 is: 43.478%\n"
      ]
     }
    ],
    "source": [
     "n1 = read_coins(\"829.txt\") \n",
-    "p1 = n1['b'] / (n1['b'] + n1['2'])\n",
-    "println(\"The chance of b is:\", p1, \"%\", \" and the chance of 2 is:\", (1 - p1), \"%\")"
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
    ]
   },
   {
@@ -147,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -156,14 +182,14 @@
      "text": [
       "illegal character:\n",
       "\n",
-      "The chance of b is:0.7260869565217392% and the chance of 2 is:0.27391304347826084%\n"
+      "The chance of b is: 72.609% and the chance of 2 is: 27.391%\n"
      ]
     }
    ],
    "source": [
     "n1 = read_coins(\"916.txt\") \n",
-    "p1 = n1['b'] / (n1['b'] + n1['2'])\n",
-    "println(\"The chance of b is:\", p1, \"%\", \" and the chance of 2 is:\", (1 - p1), \"%\")"
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
    ]
   },
   {
