--- a/read_coins.ipynb
+++ b/read_coins.ipynb
@@ -193,6 +193,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## unfair_fake.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n",
+      "The chance of b is: 40.65% and the chance of 2 is: 59.35%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = read_coins(\"/home/pi/Spielwiese/CoinFlips/PetersCoinFlips/unfair_fake.txt\") \n",
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
