--- a/read_coins.ipynb
+++ b/read_coins.ipynb
@@ -221,11 +221,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## wuerfeln-1.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n",
+      "The chance of b is: 49.052% and the chance of 2 is: 50.948%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = read_coins(\"/home/pi/Spielwiese/CoinFlips/EdvinsCoinFlips/wuerfeln-1.txt\") \n",
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## wuerfeln-2.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n",
+      "The chance of b is: 58.065% and the chance of 2 is: 41.935%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = read_coins(\"/home/pi/Spielwiese/CoinFlips/EdvinsCoinFlips/wuerfeln-2.txt\") \n",
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## wuerfeln-3.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n",
+      "The chance of b is: 54.128% and the chance of 2 is: 45.872%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = read_coins(\"/home/pi/Spielwiese/CoinFlips/EdvinsCoinFlips/wuerfeln-3.txt\") \n",
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## wuerfeln-4.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n",
+      "The chance of b is: 44.749% and the chance of 2 is: 55.251%\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = read_coins(\"/home/pi/Spielwiese/CoinFlips/EdvinsCoinFlips/wuerfeln-4.txt\") \n",
+    "p1 = (n1['b'] / (n1['b'] + n1['2']))*100\n",
+    "println(\"The chance of b is: \", round(p1, digits=3), \"%\", \" and the chance of 2 is: \", round(100 - p1, digits=3), \"%\")"
+   ]
   }
  ],
  "metadata": {
