new file, one file modified

--- a/read_coins.ipynb
+++ b/read_coins.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "read_coins (generic function with 1 method)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,6 +51,68 @@
     "    return(n)\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Any,Any} with 2 entries:\n",
+       "  'b' => 87\n",
+       "  '2' => 127"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_coins(\"183.txt\") \n",
+    "#read_coins(\"294.txt\")\n",
+    "#read_coins(\"384.txt\")\n",
+    "#read_coins(\"829.txt\")\n",
+    "#read_coins(\"916.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "illegal character:\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Any,Any} with 2 entries:\n",
+       "  'b' => 136\n",
+       "  '2' => 80"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -173,16 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "illegal character:\n",
-      "\n",
-      "The chance of b is: 72.609% and the chance of 2 is: 27.391%\n"
+     "ename": "MethodError",
+     "evalue": "MethodError: objects of type String are not callable",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: objects of type String are not callable",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[9]:1"
      ]
     }
    ],
